# sphinxjp.themes.impressjs

./: .editorconfig  .gitignore  AUTHORS.txt  LICENSE  MANIFEST.in  Makefile  README.rst  buildout.cfg  noxfile.py  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: authors.rst  conf.py  history.rst  howtouse.rst  index.rst  options.rst  sample1.rst  todo.rst  whatisthis.rst
sphinxjp/themes/impressjs/: __init__.py
sphinxjp/themes/impressjs/templates/impressjs/static/js/: impress.min.js
src/: AUTHORS.txt  HISTORY.txt  LISENCE.txt  README.txt
src/sphinxjp/themes/impressjs/: __init__.py  directives.py
src/sphinxjp/themes/impressjs/templates/impressjs/: layout.html  theme.conf
src/sphinxjp/themes/impressjs/templates/impressjs/static/: impress-demo.css
src/sphinxjp/themes/impressjs/templates/impressjs/static/js/: impress.min.js.map
