[tool.poetry]
name = "sphinxjp.themes.impressjs"
version = "0.5.0"
description = "Impress.js presentation style theme for Sphinx."
readme = "README.rst"
authors = ["shkumagai <take.this.2.your.grave@gmail.com>"]
homepage = "https://github.com/shkumagai/sphinxjp.themes.impressjs"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Framework :: Sphinx :: Theme",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup",
]
packages = [
    { include = "sphinxjp", from = "src" },
]
include = [
    "AUTHORS.txt",
    "HISTORY.txt",
    "LICENSE",
    "MANIFEST.in",
    "requirement.txt",
    "*.js",
    "*.css",
    "*.map",
]

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = ">7.1"

[tool.poetry.group.dev.dependencies]
nox = "^2023.4.22"
build = "^1.1.1"

[tool.ruff]
select = ["E", "F", "COM", "RET502", "RET503", "T20"]
ignore = [
    "E203",   # Whitespace before '{symbol}'
    "E501",   # Line too long ({width} > {limit})
    "E722",   # Do not use bare except
]

target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.isort]
profile = "black"

[tool.mypy]
strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true
warn_no_return = false
show_traceback = true
allow_redefinition = true
incremental = true

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
